creacion configuracion INICIAL

--- a/CoWorkSpace/CoWorkSpace.WEB/_Imports.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using CoWorkSpace.WEB
 @using CoWorkSpace.WEB.Layout
+@using CoWorkSpace.Shared.Entidades
+@using CoWorkSpace.WEB.Repositories
+@using CurrieTechnologies.Razor.SweetAlert2
+@using CoWorkSpace.WEB.Shared
