--- a/CoWorkSpace/CoWorkSpace.WEB/Pages/Home.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>COWORK SPACE</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>BIENVENIDOS A COWORK SPACE</h1>
 
-Welcome to your new app.
+Un lugar mejor para tí y tu organización! 
