--- a/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Miembro
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="eventos">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Evento
+            </NavLink>
+        </div>
        
     </nav>
 </div>
