--- a/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
@@ -24,7 +24,36 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Evento
             </NavLink>
         </div>
-       
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="recursos">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Recurso
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="espacios">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Espacio
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="membresias">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Membresia
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="reservas">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Reserva
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="asinacions">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Asignacion
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="inscripcions">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Inscripcion
+            </NavLink>
+        </div>
     </nav>
 </div>
 
