--- a/CoWorkSpace/CoWorkSpace.WEB/Pages/Miembros/MiembrosIndex.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Pages/Miembros/MiembrosIndex.razor
@@ -22,7 +22,7 @@
 
 
 <!--CAMBIAR EL NOMBRE POR LA CLASE QUE SE ESTÁ TRABAJANDO-->
-<h3>Miembros</h3>
+<h3>Miembro</h3>
 
 
 
@@ -93,6 +93,12 @@
                         <td>
 
                             @miembro.TelefonoMovil
+
+                        </td>
+
+                        <td>
+
+                            @miembro.MembresiaId
 
                         </td>
 
