--- a/CoWorkSpace/CoWorkSpace.WEB/Pages/Reservas/ReservasIndex.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Pages/Reservas/ReservasIndex.razor
@@ -24,7 +24,7 @@
 
 
 
-<h3>Reservas Index</h3>
+<h3>Reserva</h3>
 
 
 
@@ -85,6 +85,18 @@
                         <td>
 
                             @reserva.HoraFinal
+
+                        </td>
+
+                        <td>
+
+                            @reserva.MiembroId
+
+                        </td>
+
+                        <td>
+
+                            @reserva.EspacioId
 
                         </td>
 
