--- a/CoWorkSpace/CoWorkSpace.WEB/wwwroot/css/Estilos.css
+++ b/CoWorkSpace/CoWorkSpace.WEB/wwwroot/css/Estilos.css
@@ -10,7 +10,7 @@ main[b-exp3hg8p5p] {
 }
 
 .sidebar[b-exp3hg8p5p] {
-    background-image: linear-gradient(180deg, #0000ff 0%, #ffffff 100%);
+    background-image: linear-gradient(180deg, #0000ff 0%, #000000 100%);
 }
 
 .top-row[b-exp3hg8p5p] {
