--- a/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Layout/NavMenu.razor
@@ -45,7 +45,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="asinacions">
+            <NavLink class="nav-link" href="asignacions">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Asignacion
             </NavLink>
         </div>
