--- a/CoWorkSpace/CoWorkSpace.WEB/Pages/Espacios/EspaciosIndex.razor
+++ b/CoWorkSpace/CoWorkSpace.WEB/Pages/Espacios/EspaciosIndex.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager navigationManager
 @inject SweetAlertService swal
 
-<h3>Espacios Index</h3>
+<h3>Espacio</h3>
 
 
 <div class="mb-3">
